--- a/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-dialog.less
@@ -1,6 +1,10 @@
 .issue-dialog {
   @toggler-width: 35px;
 
+  .modal-dialog-body {
+    padding-top: 15px;
+  }
+
   &.create-issue-dialog .modal-dialog-header .title {
     margin-top: -2px;
   }
@@ -104,24 +108,6 @@
     .modal-dialog-header {
       background-color: @admin-bg-light-gray;
       padding-bottom: 30px;
-    }
-  }
-}
-
-@media screen and (max-width: 720px) {
-  body .@{_COMMON_PREFIX}modal-dialog {
-    &.grey-header {
-      padding-left: 0;
-      padding-right: 0;
-
-      .cancel-button-top {
-        background-color: #eee;
-      }
-
-      .modal-dialog-body {
-        padding-left: 30px;
-        padding-right: 30px;
-      }
     }
   }
 }
