--- a/src/main/resources/assets/admin/common/styles/apps/user/change-password-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/user/change-password-dialog.less
@@ -1,10 +1,6 @@
 .change-password-dialog {
   width: 650px;
   font-size: 14px;
-
-  .modal-dialog-header {
-    margin-bottom: 5px;
-  }
   .user-path {
     font-family: @admin-font-family;
     color: lightgray;
